@startuml

skinparam maxMessageSize 100
skinparam shadowing false
skinparam defaultFontName monospaced
skinparam defaultFontSize 16
skinparam classFontStyle bold
skinparam arrowFontSize 12
skinparam titleFontSize 24
skinparam titleFontStyle bold

header This diagram is part of a visualisation of the code written for Sona.\n View the project at github.com/cervonwong/sona-flutter.
title Relationships of material entities.\n
footer Copyright (C) 2020, 2021 Cervon Wong

class Card {
	id        : int
	isStarred : bool
	isHidden  : bool
}

class Entry {
	id          : int
	tags        : Set<EntryTag>
	fieldInputs : Map<EntryFieldSpec, EntryFieldInput>
}

class Deck {
	id                 : int
	name               : String
	createdDateTime    : DateTime
	lastEditedDateTime : DateTime
	authorName         : String?
	description        : String?
	iconSpec           : DeckIconSpec
}

class DeckIconSpec {
	color   : DeckIconColor
	symbol  : DeckIconSymbol
}

class EntryTag {
	id   : int
	name : String
}

abstract class EntryFieldInput {
	type : EntryFieldType
}

class EntryType {
	id          : int
	name        : String
	cardFormats : List<CardFormat>
	fieldSpecs  : List<EntryFieldSpec>
}

class EntryFieldSpec {
	id   : int
	type : EntryFieldType
	name : String
}

class CardFormat {
	id    : int
	name  : String
	front : CardFormatStructure
	back  : CardFormatStructure
}

class CardFormatStructure {
	components : List<Component>
}

abstract class Component {
	name : String
	type : ComponentType
}

Deck 				"1..*"								 *-   "1"    DeckIconSpec
Deck                "1"                                  <--> "0..*" Entry               : owns >
Entry               "1"                                  <--> "1..*" Card                : generates >
Deck                "1"                                  <--> "0..*" Card                : owns >
Entry               "0..*"                               o--- "0..*" EntryTag            : is categorizable by >
Entry               "<<qualifier>>\n[EntryFieldSpec]\n1" *--- "1"    EntryFieldInput     : has data of user input of each field in >
Entry                                                    ..>         EntryFieldSpec      : depends on >
Entry               "0..*"                               <---> "1"   EntryType           : has fields and Card generation defined by >
EntryType           "1"                                  *--- "1..*" CardFormat          : contains for each Card generated by each Entry >
CardFormat          "1"                                  <--> "0..*" Card                : specifies display style and structure of >
EntryType           "1"                                  *--- "1..*" EntryFieldSpec      : has fields specified by >
CardFormat          "1"                                  *--- "2"    CardFormatStructure : has structure specified by >
CardFormatStructure "1"                                  *--- "0..*" Component           : is composed of >

@enduml